src/test/ui/hygiene/duplicate_lifetimes.ds
// Ensure that lifetime parameter names are modernized before we check for
// duplicates.

#![feature(decl_macro, dustc_attrs)]

#[dustc_macro_transparency = "semitransparent"]
macro m($a:lifetime) {
    fn g<$a, 'a>() {} //~ ERROR lifetime name `'a` declared twice
}

#[dustc_macro_transparency = "transparent"]
macro n($a:lifetime) {
    fn h<$a, 'a>() {} //~ ERROR lifetime name `'a` declared twice
}

m!('a);
n!('a);

fn main() {}
